Project page update2

--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
                         </div>
                     </div>
 
+                    <!-- Illustration -->
+                    <div class="cd3pv clm9l crjl7 cbati c0n2e cqkfc cifrt" aria-hidden="true">
+                        <div class="clm9l cj9ju ck1c9 cbati c22q0">
+                            <img src="images/glow-bottom.svg" class="cl1mx" width="2146" height="774" alt="Hero Illustration">
+                        </div>
+                    </div>
+
                     <div class="c4ok0 cps8f">
                         <div class="cqkfc">
                             <!-- Carousel built with Swiper.js [https://swiperjs.com/] -->
